[package]
name = "wasmboy"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[profile.release]
lto = true
panic = 'abort'

[profile.bench]
lto = true
panic = 'abort'

[dependencies]
byteorder = "1.2.1"
cpal = "0.8.0"
minifb = "0.10.4"
structopt = "0.2.4"
gilrs = "0.6.0"
hqx = { path = "hqx" }
